src/test/ui/associated-types/defaults-specialization.stderr
error[E0053]: method `make` has an incompatible type for trait
  --> $DIR/defaults-specialization.rs:20:18
   |
LL |     fn make() -> Self::Ty {
   |                  -------- type in trait
...
LL |     fn make() -> u8 { 0 }
   |                  ^^ expected associated type, found u8
   |
   = note: expected type `fn() -> <A<T> as Tr>::Ty`
              found type `fn() -> u8`

error[E0053]: method `make` has an incompatible type for trait
  --> $DIR/defaults-specialization.rs:36:18
   |
LL |     fn make() -> Self::Ty {
   |                  -------- type in trait
...
LL |     fn make() -> bool { true }
   |                  ^^^^ expected associated type, found bool
   |
   = note: expected type `fn() -> <B<T> as Tr>::Ty`
              found type `fn() -> bool`

error[E0308]: mismatched types
  --> $DIR/defaults-specialization.rs:11:9
   |
LL |     fn make() -> Self::Ty {
   |                  -------- expected `<Self as Tr>::Ty` because of return type
LL |         0u8
   |         ^^^ expected associated type, found u8
   |
   = note: expected type `<Self as Tr>::Ty`
              found type `u8`

error[E0308]: mismatched types
  --> $DIR/defaults-specialization.rs:27:29
   |
LL |     fn make() -> Self::Ty { 0u8 }
   |                  --------   ^^^ expected associated type, found u8
   |                  |
   |                  expected `<A2<T> as Tr>::Ty` because of return type
   |
   = note: expected type `<A2<T> as Tr>::Ty`
              found type `u8`

error[E0308]: mismatched types
  --> $DIR/defaults-specialization.rs:45:29
   |
LL |     fn make() -> Self::Ty { true }
   |                  --------   ^^^^ expected associated type, found bool
   |                  |
   |                  expected `<B2<T> as Tr>::Ty` because of return type
   |
   = note: expected type `<B2<T> as Tr>::Ty`
              found type `bool`

error[E0308]: mismatched types
  --> $DIR/defaults-specialization.rs:87:32
   |
LL |     let _: <B<()> as Tr>::Ty = 0u8;
   |                                ^^^ expected associated type, found u8
   |
   = note: expected type `<B<()> as Tr>::Ty`
              found type `u8`

error[E0308]: mismatched types
  --> $DIR/defaults-specialization.rs:88:32
   |
LL |     let _: <B<()> as Tr>::Ty = true;
   |                                ^^^^ expected associated type, found bool
   |
   = note: expected type `<B<()> as Tr>::Ty`
              found type `bool`

error[E0308]: mismatched types
  --> $DIR/defaults-specialization.rs:89:33
   |
LL |     let _: <B2<()> as Tr>::Ty = 0u8;
   |                                 ^^^ expected associated type, found u8
   |
   = note: expected type `<B2<()> as Tr>::Ty`
              found type `u8`

error[E0308]: mismatched types
  --> $DIR/defaults-specialization.rs:90:33
   |
LL |     let _: <B2<()> as Tr>::Ty = true;
   |                                 ^^^^ expected associated type, found bool
   |
   = note: expected type `<B2<()> as Tr>::Ty`
              found type `bool`

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0053, E0308.
For more information about an error, try `rustc --explain E0053`.
